{
    "name": "GamePlay",
    "maps": [
        {
            "name": "Play",
            "id": "f339de99-7100-4565-9f7b-dfc615412267",
            "actions": [
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "7f17b077-7d8f-4078-83d2-1ab2eaabfe04",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "0505f69b-b3d8-4238-b689-853a40398f60",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "3b8d1a90-a25b-408a-b20a-82c1fb5a78b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d6ebcaca-a5ea-4727-bf46-64664f734f9c",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0391ad92-643b-4382-af3c-65cd7784a8ab",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34cce96a-890e-4388-a27e-c1b0e604b0dc",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}